--- a/projectFacts.html
+++ b/projectFacts.html
@@ -61,6 +61,8 @@
                 <h1> Факты о программировании </h1>
             </div>
             <ol>
+                <li> И первое что я хотел рассказать, то что одна из особенностей программистов что они ленивые люди. Поэтому программисты придумывали разные сокращения кодов, циклы, <a href="https://ru.wikipedia.org/wiki/Фреймворк">framework`и</a>  и <a href="https://ru.wikipedia.org/wiki/Библиотека_(программирование)">библиотеки</a>. </li>
+                <br>
                 <li> В мире существует около 8 500 языков программирования (да-да, именно так), но при этом число языков, которые используют чаще всего, чуть больше десятка. Это связано с малой востребованностью, а, следовательно, плохой продажей продукта, с невозможностью найти компромисс создателям языка, и с различного рода недоделками. Вот как думают и комментируют читатели:  Pascal и DELPHI - рулят! И вообще - лучший язык тот, на котором можешь написать что-то более весомое, чем Hello World. </li>
                 <br>
                 <li> Чаще люди предполагают, что если ты программист, то можешь почти всё, и начинают обращаться с разными просьбами от ремонта компьютера, написания программы, до самых невероятных вещей, которые к специализации программиста не относятся. Всё, что угодно - то инет в телефоне настроить, то тарелку перепрошить или планшет починить, а то и пылесос отремонтировать, и телевизор.  Помните, уважаемые, что у каждого человека, в том числе и у программиста, существует свои различия специализации. </li>
