--- a/projectFacts.html
+++ b/projectFacts.html
@@ -34,7 +34,7 @@
 #progImg {
     width: 1000px;
     height: 600px;
-    align-items: center;
+    margin-left: 200px;
 }
 .footer {
     background-image: url(gmi/fonFtr.jpg);
