--- a/projectFacts.html
+++ b/projectFacts.html
@@ -26,7 +26,7 @@
     color: purple;
 }
 .body {
-    background-color: orange; 
+    background-image: url(gmi/fon22.jpg); 
 }
 .main {
     margin-top: 75px;
